--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 // ==================================
 // header
 // ==================================
-.l-header {
+.p-header {
   box-sizing: border-box;
   width: 100%;
   height: 80px;
@@ -25,7 +25,7 @@
     padding-right: $space_l;
     padding-left: $space_l;
   }
-  .c-title {
+  &__title {
     font-size: $font-size_xxl;
     font-family: $font-family_corp;
     font-weight: bold;
