--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,130 +55,13 @@ $font-family_corp: 'Amatic SC', cursive;
 //独自のscssを読み込み(変数定義後に宣言する　)
 @import '../scss/foundation/base.scss';
 @import '../scss/layout/header.scss';
+@import '../scss/object/project/header.scss';
+@import '../scss/object/project/hero.scss';
 
 
-// ==================================
-// menu
-// ==================================
-@include media-breakpoint-down(xs) { // TODO:リファクタ必要（PCで修正が入る際も考えてincludeはクラスの中に書く）
-  .p-nav__menu {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: -100%;
-    background: rgba(255, 255, 255, .85);
-    width: 100%;
-    height: 100vh;
-    padding-top: 50px;
-    transition: .5s;
-    &.active {
-      transition: .5s;
-      transform: translateX(-100%);
-      z-index: 2;
-    }
-  }
-}
 
-.p-menu {
-  display: flex;
-  align-items: center;
-  font-size: $font-size_xl;
-  font-family: $font-family_corp;
-  &__item {
-    margin-right: $space_xl;
-  }
-  &--link {
-    -webkit-font-smoothing: initial;
-  }
-  @include media-breakpoint-down(xs) {
-    display: block;
-    font-size: $font-size_xxl;
-    &__item {
-      margin-right: initial;
-    }
-    &--link {
-      -webkit-font-smoothing: initial;
-      display: block;
-      padding: $space_l;
-      text-align: center;
-    }
-  }
-}
 
-// https://www.nxworld.net/tips/12-css-hamburger-menu-active-effect.html
-.p-menu--trigger {
-  display: none;
-  @include media-breakpoint-down(xs) {
-    display: inline-block;
-  }
-  transition: all .4s;
-  box-sizing: border-box;
-  position: relative;
-  width: 40px;
-  height: 32px;
-  z-index: 3;
-  &--span {
-    display: inline-block;
-    transition: all .4s;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: $font-color_default;
-    border-radius: 4px;
-    &:nth-of-type(1) {
-      top: 0;
-    }
-    &:nth-of-type(2) {
-      top: 14px;
-    }
-    &:nth-of-type(3) {
-      bottom: 0;
-    }
-  }
-  &.active span {
-    &:nth-of-type(1) {
-      transform: translateY(12px) rotate(-45deg);
-    }
-    &:nth-of-type(2) {
-      opacity: 0;
-    }
-    &:nth-of-type(3) {
-      transform: translateY(-15px) rotate(45deg);
-    }
-  }
-}
 
-// ==================================
-// hero
-// ==================================
-.hero {
-  background-image: url('../images/hero.jpg');
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 700px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &-title {
-    font-size: 60px;
-    font-family: $font-family_corp;
-    color: #fff;
-    text-shadow: 0 0 20px rgba(227, 123, 137, .4), 0 0 50px rgba(0, 0, 0, .8);
-    @include media-breakpoint-down(xs) {
-      text-align: center;
-    }
-  }
-  br {
-    display: none;
-    @include media-breakpoint-down(xs) {
-      display: block;
-    }
-  }
-}
 
 // ==================================
 // section-top
