--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,15 +57,14 @@ $font-family_corp: 'Amatic SC', cursive;
 @import '../scss/layout/header.scss';
 @import '../scss/object/project/header.scss';
 @import '../scss/object/project/hero.scss';
+@import '../scss/object/component/sectionTop.scss';
 
 
 
 
 
 
-// ==================================
-// section-top
-// ==================================
+
 .section-top {
   padding-top: 80px;
   padding-bottom: 120px;
