--- a/css/style.css
+++ b/css/style.css
@@ -7408,6 +7408,10 @@ img {
       .p-hero br {
         display: block; } }
 
+.p-bgColor__lightGray {
+  background: #f8f7fc;
+  box-shadow: 0px 0px 8px 2px #ddd inset; }
+
 .c-sectionTop {
   padding-top: 80px;
   padding-bottom: 120px; }
@@ -7422,6 +7426,16 @@ img {
       width: 70%;
       margin-left: auto;
       margin-right: auto; } }
+
+.mb-xxl {
+  margin-bottom: 30px; }
+
+.ft-corp {
+  font-weight: bold;
+  font-family: "Amatic SC", cursive; }
+
+.ft-l {
+  font-size: 24px; }
 
 .section-top {
   padding-top: 80px;
@@ -7478,17 +7492,3 @@ img {
   @media (max-width: 575.98px) {
     .footer {
       font-size: 12px; } }
-
-.bgColor-lightGray {
-  background: #f8f7fc;
-  box-shadow: 0px 0px 8px 2px #ddd inset; }
-
-.mb-xxl {
-  margin-bottom: 30px; }
-
-.ft-corp {
-  font-weight: bold;
-  font-family: "Amatic SC", cursive; }
-
-.ft-l {
-  font-size: 24px; }
